# baseline

./: .gitmodules  CMakeLists.txt  launch.cfg
scripts/: build.bat  build_debug.bat  deploy.bat
src/common/: Clock.cpp  Clock.h  DateTime.cpp  DateTime.h  Log.cpp  Log.h  strutil.cpp  strutil.h  xml.cpp  xml.h
src/core/: Config.cpp  Config.h  FileWatcher.cpp  FileWatcher.h  Launcher.cpp  Launcher.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Reflection.cpp  Reflection.h  Service.cpp  Service.h  Singleton.cpp  Singleton.h  TaskManager.cpp  TaskManager.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h
src/debugMenu/: debugMenu.cpp
src/gui/: Window.cpp  Window.h  main.cpp
src/launch/: launch.cpp  main.cpp
src/moduleDebugger/: moduleDebugger.cpp
src/network/: Connection.cpp  Connection.h  Server.cpp  Server.h
src/render/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderState.h  SimpleRenderer.cpp  SimpleRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  enum.cpp  enum.h
src/test/: test.cpp
